API test URLSchemeHandler.Exceptions is Exiting out early on macOS Debug.. https://bugs.webkit.org/show_bug.cgi?id=175030

Reviewed by Andy Estes.

Source/WebKit:

* UIProcess/Cocoa/WebURLSchemeHandlerCocoa.mm:
(WebKit::WebURLSchemeHandlerCocoa::platformTaskCompleted): Release the API wrapped on the next
  spin of the runloop.

Tools:

* TestWebKitAPI/Tests/WebKit2Cocoa/WKURLSchemeHandler-1.mm:
(-[TaskSchemeHandler webView:startURLSchemeTask:]): Stop calling an invalid NSError constructor.


Canonical link: https://commits.webkit.org/191814@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220107 268f45cc-cd09-0410-ab3c-d52691b4dbfc